# cookiecutter-html-vue

./: README.md  cookiecutter.json  pyproject.toml
hooks/: post_gen_project.py
tests/: helper.py  test_bake_package.py  test_bake_project.py  test_bake_template.py
{{cookiecutter.project_slug}}/: .stylelintrc.json  README.md  docker-compose.yml  index.html  package.json  vite.config.ts  vitest.config.ts
{{cookiecutter.project_slug}}/.github/workflows/: ubuntu-jammy.yml
{{cookiecutter.project_slug}}/src/: App.vue  main.ts  shims-vue.d.ts
{{cookiecutter.project_slug}}/src/router/: index.ts
{{cookiecutter.project_slug}}/src/store/: index.ts
{{cookiecutter.project_slug}}/src/views/: MainView.vue
{{cookiecutter.project_slug}}/src/views/pages/: IndexPage.vue
